# sql-data-warehouse-cs

./: .gitignore  main.py  pyproject.toml  readme.md
scripts/: DataWarehouse.sql
